frontend/course-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: course-ui-service
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 30002
    port: 8099
    targetPort: 80
  selector:
    app: course-ui
