frontend/course-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-course-ingress
spec:
  rules:
    - host: my-course.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-ui-service
                port:
                  number: 8099
